# maturin-sdist-repro

./: Cargo.toml  Dockerfile  Makefile  README.md
crates/word-count/: Cargo.toml  pyproject.toml
crates/word-count/python/word_count/: __init__.py
